[package]
name = "pongo-rs"
version = "0.0.1"
authors = ["Simone Romano <simoneromano@protonmail.ch>"]
edition = "2021"
description = "A short description of my package"
readme = "README.md"
repository = "https://github.com/simoneromano96/pongo-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# DB Driver
mongodb = { version = "2.0.0", optional = true }
# Struct Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
# Cursor/Stream traits
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["macros"] }

# TODO: Support more features
[features]
default = ["mongodb/default"]
