[package]
name = "pongo-rs-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
darling = "0.13.1"
mongodb = "2.1.0"
proc-macro2 = "1.0.36"
serde_json = "1.0.79"
